--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,12 @@
+[build-system]
+requires = [ "poetry>=0.12",]
+build-backend = "poetry.masonry.api"
+
 [tool.poetry]
 name = "pyppl_annotate"
 version = "0.0.1"
 description = "Adding long description/annotations for PyPPL processes."
-authors = ["pwwang <pwwang@pwwang.com>"]
+authors = [ "pwwang <pwwang@pwwang.com>",]
 license = "MIT"
 
 [tool.poetry.dependencies]
@@ -12,10 +16,6 @@ pyppl = "3.*"
 [tool.poetry.dev-dependencies]
 pytest = "*"
 pytest-cov = "*"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
 
 [tool.poetry.plugins.pyppl]
 pyppl_annotate = "pyppl_annotate"
